Final Capstone - Full organization
Final Capstone - cleaning, CNN organization, finalization (but not final draft - just gross revisions)

--- a/Capstone scratch notes.ipynb
+++ b/Capstone scratch notes.ipynb
@@ -568,9 +568,7 @@
     "    \n",
     "    https://www.peculiar-coding-endeavours.com/2018/mlp_vs_cnn/\n",
     "        \n",
-    "        https://www.kaggle.com/uysimty/keras-cnn-dog-or-cat-classification/notebook#Build-Model\n",
-    "            \n",
-    "            https://www.programcreek.com/python/example/89707/keras.layers.Conv3D\n",
+    "        https://www.kaggle.com/uysimty/keras-cnn-dog-or-cat-classification/notebook    #Build-Model\n",
     "                \n",
     "                https://www.kaggle.com/ssrihari/keras-cnn-example-98-accuracy\n",
     "                    \n",
@@ -594,6 +592,57 @@
     "https://machinelearningmastery.com/how-to-make-classification-and-regression-predictions-for-deep-learning-models-in-keras/\n",
     "    \n",
     "    https://machinelearningmastery.com/how-to-load-convert-and-save-images-with-the-keras-api/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sample cnn (kernel size syntax is messed up!)\n",
+    "\n",
+    "# CNN model 3\n",
+    "\n",
+    "# contains batchnormalizations on each layer\n",
+    "# using sigmoid activation for output layer \n",
+    "\n",
+    "def cnnmostcomplex(num_cat):\n",
+    "    model = Sequential()\n",
+    "    model.add(Conv2D(8, (3,3), padding=\"same\", activation=\"relu\",\n",
+    "                     input_shape=(32,32,3)))\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(BatchNormalization())\n",
+    "    \n",
+    "\n",
+    "    model.add(Conv2D(16, 3, 3), activation='relu')\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(BatchNormalization())\n",
+    "    model.add(Dropout(0.6))\n",
+    "\n",
+    "    model.add((Conv2D(32, 3, 3)), activation='relu')\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(BatchNormalization())\n",
+    "\n",
+    "    model.add(Conv2D(64, 3, 3), activation='relu')\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(BatchNormalization())\n",
+    "    model.add(Dropout(0.5))\n",
+    "\n",
+    "    model.add(Flatten())  # this converts our 3D feature maps to 1D feature vectors\n",
+    "    model.add(Dense(64), activation='relu')\n",
+    "    model.add(Dropout(0.5))\n",
+    "    model.add(Dense(num_cat, activation=('sigmoid')))\n",
+    "    \n",
+    "    model.compile(loss=\"categorical_crossentropy\", optimizer=\"rmsprop\",\n",
+    "                  metrics=[\"accuracy\"])\n",
+    "    print(model.summary())\n",
+    "    return model\n",
+    "\n",
+    "history = cnnmostcomplex(10).fit(xtrain10, ytrain10,\n",
+    "                       nb_epoch=10,\n",
+    "                       verbose=1,\n",
+    "                       validation_data=(xtest10, ytest10))"
    ]
   }
  ],
